--- a/2C2P_test/2C2P_test/2C2P_test.csproj
+++ b/2C2P_test/2C2P_test/2C2P_test.csproj
@@ -5,5 +5,15 @@
     <RootNamespace>_2C2P_test</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\lesko\OneDrive\Рабочий стол\2C2P_test\2C2P_test\2C2P_test\2C2P_test.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.2" />
+  </ItemGroup>
+
 
 </Project>
