--- a/2C2P_test/2C2P_test.WebAPI/2C2P_test.WebAPI.csproj
+++ b/2C2P_test/2C2P_test.WebAPI/2C2P_test.WebAPI.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\lesko\OneDrive\Рабочий стол\2C2P_test\2C2P_test\2C2P_test\2C2P_test.WebAPI.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\lesko\OneDrive\Рабочий стол\2C2P_test\2C2P_test\2C2P_test.WebAPI\2C2P_test.WebAPI.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
