--- a/2C2P_test/2C2P_test.BLL/2C2P_test.BLL.csproj
+++ b/2C2P_test/2C2P_test.BLL/2C2P_test.BLL.csproj
@@ -5,4 +5,13 @@
     <RootNamespace>_2C2P_test.BLL</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\2C2P_test.DAL\2C2P_test.DAL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.8" />
+    <PackageReference Include="System.Xml.ReaderWriter" Version="4.3.1" />
+  </ItemGroup>
+
 </Project>
