--- a/2C2P_test/2C2P_test.WebAPI/2C2P_test.WebAPI.csproj
+++ b/2C2P_test/2C2P_test.WebAPI/2C2P_test.WebAPI.csproj
@@ -15,5 +15,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\2C2P_test.BLL\2C2P_test.BLL.csproj" />
+  </ItemGroup>
+
 
 </Project>
