--- a/2C2P_test/2C2P_test.WebAPI/2C2P_test.WebAPI.csproj
+++ b/2C2P_test/2C2P_test.WebAPI/2C2P_test.WebAPI.csproj
@@ -23,5 +23,11 @@
     <ProjectReference Include="..\2C2P_test.BLL\2C2P_test.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Loggers\FileLogger\" />
+    <Folder Include="Logs\InvalidCsvFiles\" />
+    <Folder Include="Logs\InvalidXmlFiles\" />
+  </ItemGroup>
+
 
 </Project>
