Start creating logger

--- a/2C2P_test/2C2P_test.WebAPI/2C2P_test.WebAPI.csproj
+++ b/2C2P_test/2C2P_test.WebAPI/2C2P_test.WebAPI.csproj
@@ -24,9 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Loggers\FileLogger\" />
-    <Folder Include="Logs\InvalidCsvFiles\" />
-    <Folder Include="Logs\InvalidXmlFiles\" />
+    <Folder Include="Logs\InvalidUploadedFiles\" />
   </ItemGroup>
 
 
