--- a/2C2P_test/2C2P_test.WebAPI/2C2P_test.WebAPI.csproj
+++ b/2C2P_test/2C2P_test.WebAPI/2C2P_test.WebAPI.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\lesko\OneDrive\Рабочий стол\2C2P_test\2C2P_test\2C2P_test.WebAPI\2C2P_test.WebAPI.xml</DocumentationFile>
+    <DocumentationFile>2C2P_test.WebAPI.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,10 +22,5 @@
   <ItemGroup>
     <ProjectReference Include="..\2C2P_test.BLL\2C2P_test.BLL.csproj" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Logs\InvalidUploadedFiles\" />
-  </ItemGroup>
-
 
 </Project>
