--- a/2C2P_test/2C2P_test.Website/2C2P_test.Website.csproj
+++ b/2C2P_test/2C2P_test.Website/2C2P_test.Website.csproj
@@ -9,4 +9,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configs\" />
+  </ItemGroup>
 </Project>
